<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:custom="http://schemas.android.com/apk/res/com.claro.cfcmobile"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/bg_light"
              android:paddingBottom="@dimen/dp_10"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/dp_10"
            android:orientation="vertical" >

        <include layout="@layout/include_logo_view" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical" >

            <com.claro.cfcmobile.widget.TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wellcome"
                    android:textSize="@dimen/sp_20"
                    custom:typeface="robotoLight" />

            <com.claro.cfcmobile.widget.TextView
                    android:id="@android:id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"
                    android:text="@string/conditions"
                    custom:typeface="robotoLight" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onAccept"
                android:textColor="@android:color/white"
                android:background="@drawable/selector_red_button"
                android:text="@string/accept_continue" />

        <com.claro.cfcmobile.widget.TextView
                android:id="@android:id/text2"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/more_information"
                android:textSize="@dimen/sp_15"
                custom:typeface="robotoLight" />
    </LinearLayout>

</LinearLayout>