<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.claro.cfcmobile"
    android:id="@id/feedback_flipper"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.claro.cfcmobile.widget.TextView
            custom:typeface="robotoLight"
            android:layout_marginLeft="@dimen/dp_8"
            android:id="@id/feedback_loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@id/image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/empty_description"
            android:scaleType="fitXY"
            android:src="@drawable/ic_warning" />

        <com.claro.cfcmobile.widget.TextView
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:id="@id/feedback_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onReintent"
            android:text="@string/connection_failured"
            custom:typeface="robotoLight" />

        <Button
            android:onClick="onRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_red_button"
            android:layout_marginLeft="@dimen/dp_4"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_12"
            android:paddingLeft="@dimen/dp_4"
            android:paddingRight="@dimen/dp_4"
            android:text="@string/retry" />
    </LinearLayout>

</ViewFlipper>